Fix some jballerina integration tests on windows